--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -32,7 +31,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions:17.0.0'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+
+    //implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
     //firebaseui
     implementation 'com.firebaseui:firebase-ui-database:4.3.2'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
@@ -41,3 +42,4 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 }
+apply plugin: 'com.google.gms.google-services'
